--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portal de Noticias</title>
-    <link rel="stylesheet" href="css/index.css">
-</head>
+    <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Portal de Noticias</title>
+        <link rel="stylesheet" href="css/index.css">
+
+    </head>
+
+
 <body>
-    
+        <h1>teste</h1>
+        <h2>teste</h2>
+        <a href="">link</a>
+
+
+
+
 </body>
+
+
+
+
 </html>
