--- a/index.html
+++ b/index.html
@@ -1,23 +1,62 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+<head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
 
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Portal de Noticias</title>
-        <link rel="stylesheet" href="css/index.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portal de Noticias</title>
+    <link rel="stylesheet" href="css/index.css">
 
-    </head>
+</head>
 
 
 <body>
-        <h1>teste</h1>
-        <h2>teste</h2>
-        <a href="">link</a>
-        
+    <header class="container">
+        <nav id="primary" class="grid grid-flow-col">
+            <!------------------------------------------------------------->
+            <div>
+                <img src="assets/icons/List.svg" alt="icone de menu">
+                <strong>Menu</strong>
+            </div>
+            <!------------------------------------------------------------->
+            <div>
+                <img src="assets/icons/Logo.svg" alt="Technews Logo">
+
+            </div>
+            <!------------------------------------------------------------->
+
+            <div>
+                <strong>Buscar</strong>
+                <img src="assets/icons/MagnifyingGlass.svg" alt="Icone buscar">
+            </div>
+
+            <!------------------------------------------------------------->
+
+
+        </nav>
+        <!------------------------------------------------------------->
+
+        <nav id="secondary" class="grid grid-flow-col">
+            <a href="#">Inteligência Artificial</a>
+            <a href="#">Blockchain</a>
+            <a href="#">Internet</a>
+            <a href="#">Vestíveis</a>
+            <a href="#">Realidade Aumentada</a>
+            <a href="#">Realidade Virtual</a>
+
+
+
+        </nav>
+
+
+
+
+    </header>
+
 
 
 
